--- a/bolleria.html
+++ b/bolleria.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-  <title>Título de la WEB</title>
+  <title>Bolleria & pasteleria</title>
   <meta charset="UTF-8">
   <meta name="title" content="Migas Amigas">
   <link href="css/estilos.css" rel="stylesheet" type="text/css" />
@@ -32,6 +32,9 @@
       <option>Portugues</option>
     </select>
   </nav>
+  <br>
+    <br>
+    <br>
   <article class="contenedorBolleria">
     <section class="panIzq">
       <img alt="pastel1" src="img/pastel1.png" />
@@ -103,7 +106,8 @@
     </section>
   </article>
   <footer>
-    <h1>holas</h1>
+    <a href="https://www.twitter.com"><img class="imgfooter" src="img/twitter.png"/></a>
+    <a href="httos://www.facebook.com"><img class="imgfooter" src="img/facebook.png"/></a>
   </footer>
 </body>
 
