--- a/contacto.html
+++ b/contacto.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">  
   <head>    
-    <title>Título de la WEB</title>    
+    <title>Contacto</title>    
     <meta charset="UTF-8">
     <meta name="title" content="Migas Amigas">
     <link href="css/estilos.css" rel="stylesheet" type="text/css"/>   
@@ -20,12 +20,20 @@
         <option>Portugues</option>      
       </select>
     </nav>
+    <br>
+    <br>
+    <br>
     <article>
-      <section>    
+      <section class="contactoo">   
+        <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d907.717882147168!2d-6.029724838681748!3d39.84733946151889!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e0!4m0!4m5!1s0xd3e205e425d1aaf%3A0x8e831360583b34a!2sVillarreal%20de%20San%20Carlos%2C%2011%2C%2010695%20Serradilla%2C%20C%C3%A1ceres!3m2!1d39.8470574!2d-6.0294497!5e1!3m2!1ses!2ses!4v1635334581120!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <p>Utiliza nuestras coordenadas para visitrnos.</p>
+        <p>C/Villareal de San Carlos 11, Monfragüe.</p>
+        <P>Llamanos: 666 66 66 66</P>
       </section>
     </article>
     <footer>
-      <h1>holas</h1>
+      <a href="https://www.twitter.com"><img class="imgfooter" src="img/twitter.png"/></a>
+      <a href="httos://www.facebook.com"><img class="imgfooter" src="img/facebook.png"/></a>
     </footer>
   </body>  
 </html>
