--- a/panaderia.html
+++ b/panaderia.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">  
   <head>    
-    <title>Título de la WEB</title>    
+    <title>Panaderia</title>    
     <meta charset="UTF-8">
     <meta name="title" content="Migas Amigas">
     <link href="css/estilos.css" rel="stylesheet" type="text/css"/>   
@@ -20,6 +20,9 @@
         <option>Portugues</option>      
       </select>
     </nav>
+    <br>
+    <br>
+    <br>
     <article>
       <section class="panIzq">
           <img alt="pan1" src="img/pan1.png"/>
@@ -95,7 +98,8 @@
       </section>
     </article>
     <footer>
-      <h1>holas</h1>
+      <a href="https://www.twitter.com"><img class="imgfooter" src="img/twitter.png"/></a>
+      <a href="httos://www.facebook.com"><img class="imgfooter" src="img/facebook.png"/></a>
     </footer>
   </body>  
 </html>
